infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sri-demo-be
  namespace: default
  labels:
    app: sri-demo-be
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: sri-demo-be
